--- a/flink-tests/pom.xml
+++ b/flink-tests/pom.xml
@@ -225,6 +225,13 @@ under the License.
 		</dependency>
 
 		<dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-statebackend-heap-incremental</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-statebackend-rocksdb</artifactId>
 			<version>${project.version}</version>
