--- a/flink-state-backends/flink-statebackend-heap-incremental/pom.xml
+++ b/flink-state-backends/flink-statebackend-heap-incremental/pom.xml
@@ -57,6 +57,12 @@ under the License.
             <artifactId>flink-shaded-guava</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-statebackend-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
 <!-- test dependencies -->
         <dependency>
             <groupId>org.apache.flink</groupId>
